# ucse-iw-django

pruebas_noticias/: buil.sh  build.sh  main.py  manage.py  pyproject.toml  run.sh
pruebas_noticias/noticias/: admin.py  models.py  urls.py  views.py
pruebas_noticias/noticias/migrations/: 0001_initial.py
pruebas_noticias/noticias/templates/noticias/: home.html  lista_noticias.html
pruebas_noticias/pruebas_noticias/: asgi.py  settings.py  urls.py  wsgi.py
